2001-04-28  Christian Stimming  <stimming@tuhh.de>

	* src/scm/date-utilities.scm: Fixed a whole lot of bugs in the
	relative-date functions (did *nobody* ever test those???). Added
	relative dates end-cal-year, end-current-quarter, and
	end-this-month. Added comments.

	* src/scm/options-utilities.scm: Changed date-options to be combo
	options of both relative and absolute dates.

	* src/scm/report/portfolio.scm, taxtxf.scm: adapt to usual option
	conventions.

	* src/scm/report/account-summary.scm: Fix bug.

2001-04-27  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/balance-sheet.scm: Added workaround for gtkhtml
	column width.

2001-04-27  Dave Peticolas  <dave@krondo.com>

	* src/SplitLedger.c (xaccSRExpandCurrentTrans): if expanding
	a transaction, try to show all of it

	* src/register/table-gnome.c (gnc_table_show_range): new func

	* src/register/gnome/gnucash-sheet.c (gnucash_sheet_show_range):
	new func

2001-04-27  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/balance-sheet.scm: Added option to choose the
	source of prices. Adapted to changes in html-utilities.

	* src/scm/report/pnl.scm: Adapted to changes.

	* src/scm/report-utilities.scm (gnc:monetary->string): Fix bug.

	* src/scm/html-utilities.scm (gnc:html-make-exchangerates):
	Switched to different arguments. Fix bug.

	* src/scm/commodity-utilities.scm: fix bug

	* src/scm/options-utilities.scm (gnc:options-add-price-source!):
	added function.

	* src/engine/gnc-pricedb.c (gnc_pricedb_lookup_nearest_in_time):
	fix bug.

2001-04-26  Christian Stimming  <stimming@tuhh.de>

	* src/scm/commodity-utilities.scm
	(gnc:exchange-by-pricedb-{latest,nearest}): new functions.

2001-04-26  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: handle scm parsing errors

	* src/scm/report.scm: fix bug

	* src/guile/gfec.c: handle NULLs

2001-04-26  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/net-barchart.scm: New file, it is the merger of